--- a/build.xml
+++ b/build.xml
@@ -7,14 +7,14 @@
 	<property name="srcConwayGameOfLifePath" value="src/conwayGameOfLife/"/>
 	<property name="srcLangtonAntPath" value="src/langtonAnt/"/>
 	<property name="binPath" value="bin/"/>
-	<property name="buildPath" value="buil/"/>
+	<property name="buildPath" value="build/"/>
 	<property name="jarPath" value= "${buildPath}jar/"/>
 
 	
 	<!-- ========================================================================================================================== 
 	      target: all              
 	     ========================================================================================================================== -->
-	<target name="all" depends="clean, jar_cellularAutomata, jar_conwayGameOfLife, jar_langtonAnt" description="Compile all GameOfLife project">
+	<target name="all" depends="clean, execute_cellularAutomata, execute_conwayGameOfLife, execute_langtonAnt" description="Compile all GameOfLife project">
 		<echo message="Compile all project"/>
 	</target>
 	<!-- ========================================================================================================================== 
